k8s/popular-repos-search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: popular-repos-search
  namespace: popular-repos-search-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: popular-repos-search
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: popular-repos-search
    spec:
      containers:
        - name: popular-repos-search
          image: 206896450261.dkr.ecr.eu-central-1.amazonaws.com/popular-repos-search:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          securityContext: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: popular-repos-search
  namespace: popular-repos-search-test
spec:
  type: LoadBalancer
  selector:
    app: popular-repos-search
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: popular-repos-search
  namespace: popular-repos-search-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: repos.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: popular-repos-search
                port:
                  number: 80
